--- a/src/App.sass
+++ b/src/App.sass
@@ -3,6 +3,10 @@
 *
     box-sizing: border-box
 
+html
+    overflow: scroll
+    overflow-x: hidden
+
 body
     margin: 0
     font-family: $poppins
@@ -16,8 +20,8 @@ p
     margin: 0
 
 ::placeholder
-  color: $mediumGray
-  opacity: 0.6
+    color: $mediumGray
+    opacity: 0.6
 
 .main
     width: 100vw
