--- a/src/components/mainTemplate/MainTemplate.sass
+++ b/src/components/mainTemplate/MainTemplate.sass
@@ -4,5 +4,5 @@
     background-color: $coolWhite
     width: 375px
     height: 812px
-    padding: 45px 35px
+    padding: 45px 0 0 0
     margin: 10px 30px
