--- a/src/components/menuAndSearch/MenuAndSearch.sass
+++ b/src/components/menuAndSearch/MenuAndSearch.sass
@@ -5,6 +5,10 @@
     height: 40px
     border: 4px solid $white
     border-radius: 11px
+    background-image: url(../../assets/headshot3.jpg)
+    background-size: cover
+    background-position: center
+    background-repeat: no-repeat
 
 .ms-horiz-flex-container
     width: 100%
@@ -27,6 +31,9 @@
     width: 12px
     height: auto
     margin-right: 3px
+
+.ms-main
+    margin: 0 30px
 
 .ms-menu-button
     width: 40px
