--- a/src/styles/Variables.sass
+++ b/src/styles/Variables.sass
@@ -5,7 +5,9 @@ $background: #dde0ec
 $blue: #1b5cd6
 $darkBlue: #1252cc
 $coolWhite: #f5f5f7
+$lightBlue: #e3edff
 $lightGray: #b8c0d1
+$borderGray: #ededed
 $mediumGray: #9fa6b5
 $white: #ffffff
 
