--- a/src/components/findYourDoctor/FindYourDoctor.sass
+++ b/src/components/findYourDoctor/FindYourDoctor.sass
@@ -1,10 +1,57 @@
 @import ../../styles/Variables.sass
 
+.fyd-doc-info
+    width: calc(100% - 60px)
+    display: flex
+    align-items: center
+    margin: -20px 30px 0 30px
+    padding: 15px
+    background: $white
+    border-radius: 15px
+
+.fyd-doc-info div h3 
+    font-size: 14px
+    color: $fontBlue
+    margin: 0
+
+.fyd-doc-info div p 
+    font-size: 12px
+    color: $mediumGray
+    font-weight: $medium
+
+.fyd-doc-info img 
+    width: 75px
+    height: 75px
+    border-radius: 18px
+    margin-right: 15px
+
+.fyd-doctypes-wrapper
+    display: flex
+    align-items: center
+    justify-content: flex-start
+    width: 100%
+    height: 100px
+    overflow-x: auto
+    overflow: scroll
+    position: relative
+    padding: 0 30px
+    margin-top: -20px
+
+.fyd-doctypes-wrapper::-webkit-scrollbar
+    width: 0
+
+.fyd-flex-padding
+    width: 30px
+    height: 30px
+    flex-shrink: 0
+
 .fyd-horiz-flex-container
     width: 100%
     display: flex 
     justify-content: space-between
     align-items: center
+    padding: 0 30px
+    margin-bottom: 20px
 
 .fyd-horiz-flex-container h1 
     color: $fontBlue
@@ -12,7 +59,15 @@
     margin: 0
 
 .fyd-main
+    width: 100%
     margin-top: 35px
+
+.fyd-ratings-container
+    display: flex
+    justify-content: flex-start
+    align-items: flex-end
+    height: 100%
+    margin-top: 12px
 
 .fyd-switch-icon
     width: 25px
