--- a/src/components/bottomMenu/BottomMenu.sass
+++ b/src/components/bottomMenu/BottomMenu.sass
@@ -1,7 +1,8 @@
 @import ../../styles/Variables.sass
 
 .bc-main
-    margin-top: 28px
+    position: absolute
+    bottom: 0
     width: 100%
     height: 100px
     padding: 30px
