Fixes React Router

--- a/src/components/mainTemplate/MainTemplate.sass
+++ b/src/components/mainTemplate/MainTemplate.sass
@@ -3,6 +3,10 @@
 .template-main
     background-color: $coolWhite
     width: 375px
-    height: 812px
-    padding: 45px 0 0 0
-    margin: 10px 30px
+    height: 100vh
+    padding: 45px 0 120px 0
+    position: relative
+    overflow-y: scroll
+
+.template-main::-webkit-scrollbar
+    width: 0
