--- a/src/components/bottomMenu/BottomMenu.sass
+++ b/src/components/bottomMenu/BottomMenu.sass
@@ -1,7 +1,8 @@
 @import ../../styles/Variables.sass
 
 .bc-main
-    position: absolute
+    position: fixed
+    max-width: $viewWidth
     bottom: 0
     width: 100%
     height: 100px
@@ -10,4 +11,5 @@
     display: flex
     justify-content: space-between
     align-items: center
+    z-index: 4
 
