Adds Hooks menu

--- a/src/App.sass
+++ b/src/App.sass
@@ -27,10 +27,29 @@ p
     width: 100vw
     height: auto
     min-height: 100vh
+    // display: flex
+    // justify-content: space-evenly
+    // flex-wrap: wrap
+    background-color: $background
+
+.switch-menu
     padding: 30px
+    width: 100%
+    max-width: $viewWidth
     display: flex
     justify-content: space-evenly
-    flex-wrap: wrap
-    background-color: $background
+    align-items: center
+    cursor: pointer
+
+.switch-menu div 
+    display: flex
+    justify-content: center
+    align-items: center
+    width: 30px
+    height: 30px
+    border-radius: 15px
+    background: $blue
+    color: $white
+    text-align: center
 
 
