--- a/src/App.sass
+++ b/src/App.sass
@@ -27,9 +27,8 @@ p
     width: 100vw
     height: auto
     min-height: 100vh
-    // display: flex
-    // justify-content: space-evenly
-    // flex-wrap: wrap
+    display: flex
+    justify-content: center
     background-color: $background
 
 .switch-menu
