Adds google maps

--- a/src/components/findYourDoctor/FindYourDoctor.sass
+++ b/src/components/findYourDoctor/FindYourDoctor.sass
@@ -8,11 +8,12 @@
     padding: 15px
     background: $white
     border-radius: 15px
+    box-shadow: 0 2.8px 6.2px rgba(0, 0, 0, 0.014), 0 6.7px 8.3px rgba(0, 0, 0, 0.014)
 
 .fyd-doc-info div h3 
     font-size: 14px
     color: $fontBlue
-    margin: 0
+    margin: 0 0 5px 0
 
 .fyd-doc-info div p 
     font-size: 12px
