--- a/src/components/menuAndSearch/MenuAndSearch.sass
+++ b/src/components/menuAndSearch/MenuAndSearch.sass
@@ -9,6 +9,7 @@
     background-size: cover
     background-position: center
     background-repeat: no-repeat
+    box-shadow: 0 2.8px 6.2px rgba(0, 0, 0, 0.014), 0 6.7px 8.3px rgba(0, 0, 0, 0.014)
 
 .ms-horiz-flex-container
     width: 100%
@@ -44,6 +45,7 @@
     background-repeat: no-repeat
     background-size: 20px
     border-radius: 11px
+    box-shadow: 0 2.8px 6.2px rgba(0, 0, 0, 0.014), 0 6.7px 8.3px rgba(0, 0, 0, 0.014)
 
 .ms-search-bar
     width: 100%
