--- a/src/components/menuAndSearch/MenuAndSearch.sass
+++ b/src/components/menuAndSearch/MenuAndSearch.sass
@@ -1,44 +1,42 @@
 @import ../../styles/Variables.sass
 
 .ms-headshot
-    width: 40px
-    height: 40px
-    border: 4px solid $white
-    border-radius: 11px
     background-image: url(../../assets/headshot3.jpg)
-    background-size: cover
     background-position: center
     background-repeat: no-repeat
+    background-size: cover
+    border: 4px solid $white
+    border-radius: 11px
     box-shadow: 0 2.8px 6.2px rgba(0, 0, 0, 0.014), 0 6.7px 8.3px rgba(0, 0, 0, 0.014)
+    height: 40px
+    width: 40px
 
 .ms-horiz-flex-container
     width: 100%
 
 .ms-horiz-flex-container * p
-    text-align: center
     font-size: 12px
+    text-align: center
 
 .ms-horiz-flex-container * span
+    color: $fontBlue
     font-size: 14px
     font-weight: $heavy
-    color: $fontBlue
 
 .ms-horiz-flex-container, .ms-location-container
+    align-items: center
     display: flex
     justify-content: space-between
-    align-items: center
 
 .ms-location-icon
-    width: 12px
     height: auto
     margin-right: 3px
+    width: 12px
 
 .ms-main
     margin: 0 30px
 
 .ms-menu-button
-    width: 40px
-    height: 40px
     background: $white
     background-image: url("../../assets/menu-icon.svg")
     background-position: center
@@ -46,25 +44,27 @@
     background-size: 20px
     border-radius: 11px
     box-shadow: 0 2.8px 6.2px rgba(0, 0, 0, 0.014), 0 6.7px 8.3px rgba(0, 0, 0, 0.014)
+    height: 40px
+    width: 40px
 
 .ms-search-bar
-    width: 100%
-    height: 40px
-    border-radius: 11px
+    align-items: center
     background: $white
-    margin-top: 40px
+    border-radius: 11px
     box-shadow: 0 2.8px 6.2px rgba(0, 0, 0, 0.014), 0 6.7px 8.3px rgba(0, 0, 0, 0.014)
     display: flex
-    align-items: center
+    height: 40px
+    margin-top: 40px
     padding-right: 20px
+    width: 100%
 
 .ms-search-bar input 
-    width: 100%
-    border: none
     color: $mediumGray !important
+    border: none
+    flex-grow: 1
 
 .ms-search-icon
-    width: 16px
     height: auto
     margin: auto 20px
     transform: scaleX(-1)
+    width: 16px
