--- a/src/styles/Variables.sass
+++ b/src/styles/Variables.sass
@@ -5,13 +5,15 @@ $viewWidth: 375px
 
 // colors
 $background: #dde0ec
-$blue: #1b5cd6
-$darkBlue: #1252cc
-$coolWhite: #f5f5f7
+$blue: #0958e8
+$borderGray: #ededed
+$darkBlue: #004ad4
+$coolWhite: #f7f7ff
 $lightBlue: #e3edff
 $lightGray: #b8c0d1
-$borderGray: #ededed
 $mediumGray: #9fa6b5
+$navyBlue: #13284e
+$red: #fc033d
 $white: #ffffff
 
 // fonts
