--- a/src/components/videoDocInfo/VideoDocInfo.sass
+++ b/src/components/videoDocInfo/VideoDocInfo.sass
@@ -32,11 +32,12 @@
 .vdi-status-container
     align-items: center
     backdrop-filter: blur(5px)
-    border-radius: 10px
+    border-radius: 8px
     display: flex 
+    justify-content: center
     margin-top: 12px
     padding: 4px 8px
-    width: 68px
+    width: 70px
 
 .vdi-status-container span
     color: $white
