Minor styling update

--- a/src/components/videoDocVolumeSlider/VideoDocVolumeSlider.sass
+++ b/src/components/videoDocVolumeSlider/VideoDocVolumeSlider.sass
@@ -36,6 +36,15 @@
     height: 10px
     width: 10px
 
+.vdvs-slider::-moz-range-thumb
+    -webkit-appearance: none
+    background: #ffffff
+    border-radius: 8px
+    border: none
+    box-shadow: -2px 0px 3px 0px rgba(150,150,150,0.71)
+    height: 10px
+    width: 10px
+
 .vdvs-volume-icon
     height: 18px
     margin-right: 10px
