Updates view switch buttons

--- a/src/App.sass
+++ b/src/App.sass
@@ -42,13 +42,17 @@ p
 
 .switch-menu div 
     align-items: center
-    background: $blue
+    background: $white
     border-radius: 15px
-    color: $white
+    color: $blue
     display: flex
     height: 30px
     justify-content: center
     text-align: center
     width: 30px
+
+    &.active
+        background: $blue
+        color: $white
 
 
