--- a/src/components/videoDocVolumeSlider/VideoDocVolumeSlider.sass
+++ b/src/components/videoDocVolumeSlider/VideoDocVolumeSlider.sass
@@ -1,15 +1,19 @@
 @import ../../styles/Variables.sass
 
 .vdvs-main
-    height: 190px
-    padding: 0 30px
-    position: relative
+    align-items: center
+    display: flex 
+    height: 100vh
+    justify-content: flex-start
+    padding: 0 30px 100px 30px
+    position: absolute
+    top: 0
+    width: 100%
 
 .vdvs-slider-container
     align-items: center
     background: $white
     border-radius: 15px
-    bottom: 0
     box-shadow: 2.8px 0 6.2px rgba(0, 0, 0, 0.014), 6.7px 0 8.3px rgba(0, 0, 0, 0.014)
     display: flex
     justify-content: center
